@startuml
class Main {
+ {static} void main(String[])
}

class Car {
+ void accelerate()
+ void stop()
+ void start()
}

class Bicycle {
+ void accelerate()
+ void stop()
+ void start()
}

abstract class Vehicle {
+ {abstract}void start()
+ {abstract}void stop()
+ {abstract}void accelerate()
}

class Motorcycle {
+ void accelerate()
+ void stop()
+ void start()
}



Vehicle <|-- Car
Vehicle <|-- Bicycle
Vehicle <|-- Motorcycle
@enduml